--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,6 @@
 # BlueJ files
 *.ctxt
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
 
 # Package Files #
 *.jar
@@ -19,5 +17,32 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+
+# OS X
+.DS_Store*
+Icon?
+._*
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Linux
+.directory
+*~
+
+# bin folder
+bin
+
+# simulation output folder
+sim_results
+
+# eclipse's files
+.settings
+.classpath
+.project
+
+# IntelliJ project files
+.idea
+*.iml
