1-Renamed app to drone_app, 2-Renamed the files inside the app folder from Drone* to My*, 3-Added a new layer for drone

--- a/scripts/drone_app/config/default_config.properties
+++ b/scripts/drone_app/config/default_config.properties
@@ -1,5 +1,5 @@
 #default config file
-simulation_time=60
+simulation_time=10
 warm_up_period=3
 file_log_enabled=true
 deep_file_log_enabled=false
@@ -14,7 +14,7 @@ location_check_interval=0.005
 ap_delay_check_interval=0.1
 
 min_number_of_mobile_devices=100
-max_number_of_mobile_devices=1800
+max_number_of_mobile_devices=500
 mobile_device_counter_size=100
 
 wan_propogation_delay=0.15
@@ -42,7 +42,7 @@ storage_for_mobile_vm=32000
 
 #use ',' for multiple values
 #orchestrator_policies=AI_TRAINER,RANDOM,PREDICTIVE,MAB,AI_BASED
-orchestrator_policies=RANDOM,PREDICTIVE,GAME_THEORY,MAB,AI_BASED
+orchestrator_policies=AI_TRAINER,MAB,AI_BASED
 
 #use ',' for multiple values
 simulation_scenarios=ITS_SCENARIO
@@ -51,3 +51,7 @@ simulation_scenarios=ITS_SCENARIO
 attractiveness_L1_mean_waiting_time=480
 attractiveness_L2_mean_waiting_time=240
 attractiveness_L3_mean_waiting_time=120
+
+#bounds of the area
+northern_bound=3000
+eastern_bound=3000
