--- a/scripts/drone_app/ai_trainer/config.json
+++ b/scripts/drone_app/ai_trainer/config.json
@@ -1,9 +1,9 @@
 {
-	"sim_result_folder": "/home/cagatay/Projects/git-repos/EdgeCloudSim/scripts/sample_app5/output/18-10-2019_21-16/default_config",
-	"num_iterations": 10,
+	"sim_result_folder": "/Users/nedasoltani/Work/Task Offloading/EdgeCloudSim/edge-offloading/scripts/drone_app/sim_results",
+	"num_iterations": 5,
 	"train_data_ratio": 80,
 	"min_vehicle": 100,
-	"max_vehicle": 2200,
+	"max_vehicle": 1800,
 	"vehicle_step_size": 100,
 	"classifier": "MultilayerPerceptron",
 	"regressor": "LinearRegression"
