minor corrections for AI Trainer

--- a/scripts/drone_app/config/default_config.properties
+++ b/scripts/drone_app/config/default_config.properties
@@ -14,7 +14,7 @@ location_check_interval=0.005
 ap_delay_check_interval=0.1
 
 min_number_of_mobile_devices=100
-max_number_of_mobile_devices=500
+max_number_of_mobile_devices=1800
 mobile_device_counter_size=100
 
 wan_propogation_delay=0.15
@@ -42,7 +42,7 @@ storage_for_mobile_vm=32000
 
 #use ',' for multiple values
 #orchestrator_policies=AI_TRAINER,RANDOM,PREDICTIVE,MAB,AI_BASED
-orchestrator_policies=AI_TRAINER
+orchestrator_policies=AI_TRAINER,MAB,AI_BASED
 
 #use ',' for multiple values
 simulation_scenarios=ITS_SCENARIO
