--- a/scripts/drone_app/config/default_config.properties
+++ b/scripts/drone_app/config/default_config.properties
@@ -42,7 +42,7 @@ storage_for_mobile_vm=32000
 
 #use ',' for multiple values
 #orchestrator_policies=AI_TRAINER,RANDOM,PREDICTIVE,MAB,AI_BASED
-orchestrator_policies=AI_TRAINER,MAB,AI_BASED
+orchestrator_policies=MAB,AI_BASED
 
 #use ',' for multiple values
 simulation_scenarios=ITS_SCENARIO
