--- a/scripts/drone_app/config/default_config.properties
+++ b/scripts/drone_app/config/default_config.properties
@@ -17,8 +17,8 @@ min_number_of_mobile_devices=100
 max_number_of_mobile_devices=1800
 mobile_device_counter_size=100
 
-wan_propogation_delay=0.15
-gsm_propogation_delay=0.16
+wan_propagation_delay=0.15
+gsm_propagation_delay=0.16
 lan_internal_delay=0.01
 wlan_bandwidth=10
 man_bandwidth=1000
