--- a/scripts/sample_app5/config/default_config.properties
+++ b/scripts/sample_app5/config/default_config.properties
@@ -1,5 +1,5 @@
 #default config file
-simulation_time=60
+simulation_time=10
 warm_up_period=3
 file_log_enabled=true
 deep_file_log_enabled=false
@@ -42,7 +42,7 @@ storage_for_mobile_vm=32000
 
 #use ',' for multiple values
 #orchestrator_policies=AI_TRAINER,RANDOM,PREDICTIVE,MAB,AI_BASED
-orchestrator_policies=RANDOM,PREDICTIVE,GAME_THEORY,MAB,AI_BASED
+orchestrator_policies=MAB,AI_BASED
 
 #use ',' for multiple values
 simulation_scenarios=ITS_SCENARIO
