--- a/scripts/drone_app/ai_trainer/config.json
+++ b/scripts/drone_app/ai_trainer/config.json
@@ -1,10 +1,10 @@
 {
 	"sim_result_folder": "/Users/nedasoltani/Work/Task Offloading/EdgeCloudSim/edge-offloading/sim_results",
-	"num_iterations": 5,
+	"num_iterations": 10,
 	"train_data_ratio": 80,
-	"min_vehicle": 100,
-	"max_vehicle": 1800,
-	"vehicle_step_size": 100,
+	"min_mobile": 100,
+	"max_mobile": 1800,
+	"mobile_step_size": 100,
 	"classifier": "MultilayerPerceptron",
 	"regressor": "LinearRegression"
 } 
