--- a/scripts/drone_app/ai_trainer/config.json
+++ b/scripts/drone_app/ai_trainer/config.json
@@ -1,6 +1,6 @@
 {
-	"sim_result_folder": "/Users/nedasoltani/Work/Task Offloading/EdgeCloudSim/edge-offloading/sim_results",
-	"num_iterations": 10,
+	"sim_result_folder": "../../../sim_results",
+	"num_iterations": 5,
 	"train_data_ratio": 80,
 	"min_mobile": 100,
 	"max_mobile": 1800,
