--- a/scripts/drone_app/config/default/config.properties
+++ b/scripts/drone_app/config/default/config.properties
@@ -1,5 +1,5 @@
 #default config file
-simulation_time=60
+simulation_time=10
 warm_up_period=3
 file_log_enabled=true
 deep_file_log_enabled=false
@@ -42,7 +42,7 @@ storage_for_mobile_vm=32000
 
 #use ',' for multiple values
 #orchestrator_policies=AI_TRAINER,RANDOM,PREDICTIVE,MAB,AI_BASED
-orchestrator_policies=MAB
+orchestrator_policies=AI_TRAINER
 
 #use ',' for multiple values
 simulation_scenarios=ITS_SCENARIO
@@ -53,5 +53,11 @@ attractiveness_L2_mean_waiting_time=240
 attractiveness_L3_mean_waiting_time=120
 
 #bounds of the area
-northern_bound=3000
-eastern_bound=3000
+x_bound=3200
+y_bound=2000
+
+num_columns=8
+num_rows=5
+
+#COUNT, NONE
+drones_movement_strategy=COUNT
