--- a/scripts/drone_app/ai_trainer/config.json
+++ b/scripts/drone_app/ai_trainer/config.json
@@ -1,15 +1,10 @@
 {
-	"sim_result_folder": "/Users/yasamanamannejad/workspace_all/research/edge-offloading/sim_results",
-	"num_iterations": 10,
+	"sim_result_folder": "../../../sim_results",
+	"num_iterations": 5,
 	"train_data_ratio": 80,
 	"min_mobile": 100,
 	"max_mobile": 1800,
 	"mobile_step_size": 100,
-<<<<<<< HEAD
-	"classifier": "NaiveBayes",
-	"regressor": "LinearRegression"
-=======
 	"classifier": "SMO",
 	"regressor": "SMOreg"
->>>>>>> 9a04c8c14197410ae19baca7428e444fd34b8f3d
-} 
+}
