added density strategy for drone movements

--- a/scripts/drone_app/config/default/config.properties
+++ b/scripts/drone_app/config/default/config.properties
@@ -2,7 +2,7 @@
 simulation_time=60
 warm_up_period=3
 file_log_enabled=true
-deep_file_log_enabled=false
+deep_file_log_enabled=true
 
 #logging is disabled if it is 0
 vm_load_check_interval=0.025
@@ -59,5 +59,6 @@ y_bound=2000
 num_columns=8
 num_rows=5
 
-#COUNT, NONE
-drones_movement_strategy=COUNT
+#COUNT, DENSITY, NONE
+drones_movement_strategy=DENSITY
+drones_to_move=3
