Added attractiveness to config file

--- a/scripts/drone_app/config/default/config.properties
+++ b/scripts/drone_app/config/default/config.properties
@@ -62,3 +62,8 @@ num_rows=5
 #COUNT, DENSITY, NONE
 drones_movement_strategy=DENSITY
 drones_to_move=3
+
+# ATTRACTIVENESS
+att0=0,3
+att1=2
+att2=1
