* Added Game Theory to Edge Orchestrator. * Added Util as a drone movement strategy * Changed VM selection in drone to utility-based * Minor corrections

--- a/scripts/drone_app/config/default/config.properties
+++ b/scripts/drone_app/config/default/config.properties
@@ -59,11 +59,11 @@ y_bound=2000
 num_columns=8
 num_rows=5
 
-#COUNT, DENSITY, NONE
-drones_movement_strategy=DENSITY
+#COUNT, DENSITY, NONE, UTIL
+drones_movement_strategy=UTIL
 drones_to_move=3
 
 # ATTRACTIVENESS
-att0=0,3
-att1=2
-att2=1
+att0=0,1,2,3,4,5,6,7,8,15,16,23,24,31,32,33,34,35,36,37,38,39
+att1=9,10,11,12,13,14,17,22,23,24,25,26,27,28,29,30
+att2=18,19,20,21
