* Trained models for UTIL

--- a/scripts/drone_app/config/more_drones/config.properties
+++ b/scripts/drone_app/config/more_drones/config.properties
@@ -41,7 +41,7 @@ ram_for_mobile_vm=1800
 storage_for_mobile_vm=32000
 
 #use ',' for multiple values
-#orchestrator_policies=AI_TRAINER,RANDOM,PREDICTIVE,MAB,AI_BASED
+#orchestrator_policies=AI_TRAINER,RANDOM,PREDICTIVE,MAB,AI_BASED,GAME_THEORY
 orchestrator_policies=AI_TRAINER
 
 #use ',' for multiple values
@@ -59,8 +59,8 @@ y_bound=2000
 num_columns=8
 num_rows=5
 
-#COUNT, DENSITY, NONE
-drones_movement_strategy=DENSITY
+#COUNT, DENSITY, UTIL, NONE
+drones_movement_strategy=UTIL
 drones_to_move=3
 
 # ATTRACTIVENESS
