--- a/lib/cloudsim-4.0/META-INF/maven/org.cloudbus.cloudsim/cloudsim/pom.xml
+++ b/lib/cloudsim-4.0/META-INF/maven/org.cloudbus.cloudsim/cloudsim/pom.xml
@@ -67,6 +67,27 @@
 	</plugins>
   </build>
     <dependencies>
+
+    	<dependency>
+    		<groupId>org.json</groupId>
+    		<artifactId>json</artifactId>
+    		<version>20230227</version>
+    		<type>bundle</type>
+    	</dependency>
+		
+    	<dependency>
+    		<groupId>com.googlecode.json-simple</groupId>
+    		<artifactId>json-simple</artifactId>
+    		<version>1.1.1</version>
+    		<type>bundle</type>
+    	</dependency>
+
+		<dependency>
+			<groupId>org.cloudsimplus</groupId>
+			<artifactId>cloudsim-plus</artifactId>
+			<version>3.0.1</version>
+		</dependency>
+			
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
